--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Science -- Periodicals'
 - !lcc 'AP'
 - !lcsh 'Literature, Modern -- 19th century -- Periodicals'
+- GITenberg
 title: Lippincott's Magazine of Popular Literature and Science, October, 1877. Vol
   XX - No. 118
 url: http://www.gutenberg.org/ebooks/16361
